[package]
name = "nrot"
version = "2.0.0"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["cryptography"]
edition = "2021"
keywords = ["encryption", "decryption", "rot"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/azzamsa/nrot"
description = "simple letter substitution cipher"
