[package]
name = "nrot"
version = "2.0.0"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["cryptography"]
edition = "2021"
keywords = ["encryption", "decryption", "rot"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/azzamsa/nrot"
rust-version = "1.73.0"
description = "simple letter substitution cipher"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
